--- a/cs185c/midterm/preprocessing.ipynb
+++ b/cs185c/midterm/preprocessing.ipynb
@@ -115,9 +115,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python3-TensorFlow2",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python3-tensorflow2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -129,7 +129,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.6.10"
   }
  },
  "nbformat": 4,
